<resources>
    <string name="app_name">Warehouse</string>
    <string name="title_activity_login">BC Warehouse</string>
    <string name="sorter_activity_label">Sorter Mode</string>
    <string name="manager_activity_label">Manager Mode</string>
    <string name="new_lot_activity_label">Create New Lot</string>
    <string name="approve_lot_activity_label">Approve This Lot</string>
    <string name="New">New</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sorter">Sorter</string>
    <string name="manager">Manager</string>
    <string name="new_lot">New Lot</string>
    <string name="submit">Submit</string>
    <string name="weight">Weight</string>
    <string name="comment">Comment</string>
    <string name="sorter_comment">Sorter\'s comment: </string>
    <string name="kg">kg</string>
    <string name="enter_lot_s_weight">Enter this lot\'s weight in kilos</string>
    <string name="optional_comment">Optional comment</string>
    <string name="photo">Photo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cannot_login">Cannot login</string>
    <string name="enter_new_pass">You need to change your password</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="new_password_failed">Unable to set a new password</string>
    <string name="pass_change_ok">Password changed successfully</string>
    <string name="user_email_key">user_email_key</string>
    <string name="sorter_cam_rationale">You are required to use a camera to create the lots</string>
    <string name="submit_ok">Submitted successfully</string>
    <string name="no_thanks">No, thanks</string>
    <string name="lorem">Lorem</string>
    <string name="zero_zero">00</string>
    <string name="active_lots">Active Lots</string>
    <string name="choose_price">Choose a price for this lot"</string>
    <string name="price">Price</string>
    <string name="price_hint">Enter lot\'s price</string>
    <string name="publish">Publish</string>
    <string name="delete">Delete</string>
    <string name="unable_to_load">Unable to load</string>
    <string name="unknown">Unknown</string>
    <string name="publish_success">Published successfully</string>
    <string name="error_code_colon">Error code: </string>
    <string name="no_access_token">No access token</string>
    <string name="re_login_prompt">You belong to no groups. Please re-login</string>
    <string name="context_fruit_kind">A kind of the lot\'s fruit</string>
    <string name="context_fruit_variety">A variety of the lot\'s fruit</string>
    <string name="data_conn_ready">Data connection established</string>
    <string name="main_approve_lot">Approve</string>
    <string name="new_photo">New Photo</string>
    <string name="hint_caliber">Fruit\'s caliber</string>
    <string name="hint_origin">Country of origin</string>
    <string name="hint_condition">Fruit\'s condition</string>
    <string name="hint_pallet_weight">Enter a one pallet\'s weight</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="origin">Country of Origin</string>
    <string name="label_pallet_weight">Pallet Weight</string>
    <string name="total_weight_required">Total weight is required</string>
</resources>
