<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLotActivity">

    <Spinner
        android:id="@+id/spinFruit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/context_fruit_kind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinVariety"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/context_fruit_variety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinFruit" />

    <Button
        android:id="@+id/photo"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinVariety" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photoList"
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/spinVariety" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/submit"
        app:layout_constraintStart_toEndOf="@+id/submit" />

    <ScrollView
        android:id="@+id/attrsScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/totalWeightKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="total weight"
                android:ems="10"
                android:hint="@string/enter_lot_s_weight"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/caliber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="caliber"
                android:contentDescription="@string/hint_caliber" />

            <EditText
                android:id="@+id/palletWeighKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="pallet weight"
                android:ems="10"
                android:hint="@string/hint_pallet_weight"
                android:inputType="number"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/origin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/hint_origin" />

            <Spinner
                android:id="@+id/condition"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/hint_condition" />

            <TextView
                android:id="@+id/arrivalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/arrival"
                android:text="@string/arrival_date" />

            <DatePicker
                android:id="@+id/arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/expirationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/expiration"
                android:text="@string/expiration_date" />

            <DatePicker
                android:id="@+id/expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="80dp"
                android:autofillHints="newLotComment"
                android:ems="10"
                android:hint="@string/optional_comment"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>